[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/MovingPlatform.png" type="Texture" id=1]
[ext_resource path="res://World/MovingPlatform.gd" type="Script" id=2]
[ext_resource path="res://Allies/AllyCommand.tscn" type="PackedScene" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -24, 8, 24, 8, 24, -8, -24, -8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 43 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 10 )

[node name="MovingPlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="Platform" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 0
motion/sync_to_physics = true

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( 0, 8 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Platform/Sprite"]
occluder = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.1

[node name="PlayerDetector" type="Area2D" parent="Platform"]
collision_layer = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/PlayerDetector"]
position = Vector2( 0, -43 )
shape = SubResource( 3 )

[node name="LeftPlatform" type="Timer" parent="Platform/PlayerDetector"]
wait_time = 2.0
one_shot = true

[node name="AllyCommand" parent="Platform" instance=ExtResource( 3 )]
position = Vector2( 19, -10 )
command = 1

[node name="CollisionShape2D" parent="Platform/AllyCommand" index="0"]
position = Vector2( 6, 0 )
shape = SubResource( 4 )

[node name="AllyCommand2" parent="Platform" instance=ExtResource( 3 )]
position = Vector2( -31, -10 )
command = 1

[node name="CollisionShape2D" parent="Platform/AllyCommand2" index="0"]
position = Vector2( 6, 0 )
shape = SubResource( 4 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[connection signal="body_entered" from="Platform/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="Platform/PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="Platform/PlayerDetector/LeftPlatform" to="." method="_on_LeftPlatform_timeout"]

[editable path="Platform/AllyCommand"]
[editable path="Platform/AllyCommand2"]
